# codejeet

./: .gitignore  .lintstagedrc.js  .oxfmtrc.json  CLAUDE.md  README.md  cloudflare-env.d.ts  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  wrangler.jsonc
app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.client.tsx  page.tsx  robots.ts  sitemap.ts
app/blog/: page.client.tsx  page.tsx
app/companies/: page.client.tsx  page.tsx
app/dashboard/: page.client.tsx  page.tsx
app/podcast/: page.client.tsx  page.tsx
app/system-design/: page.tsx
components/: AnimatedImage.tsx  Footer.tsx  LeetCodeDashboard.tsx  Navbar.tsx  PodcastPlayer.tsx  QuestionsTable.tsx  TOC.tsx  TopBanner.tsx  TopicDropdown.tsx
components/blog/: CodeTabs.tsx  MermaidDiagram.tsx  MermaidDiagramImpl.tsx
components/learn/: LessonWorkspace.tsx  QuizWorkspace.tsx
components/magic-ui/: number-ticker.tsx  rainbow-button.tsx
components/seo/: Breadcrumbs.tsx
components/ui/: button.tsx  card.tsx  decor.tsx  frame.tsx  slider.tsx  (+1 more)
data/: podcast-manifest.json
hooks/: use-podcast-player.ts  use-toast.ts
lib/: blog-store.ts  cache-version.ts  dashboard-store.ts  data.ts  database.ts  db.ts  podcast-types.ts  pseo-data.ts  seo.ts
migrations/: 0000_init.sql
scraper/: autopilot.sh  pyproject.toml  report.py  scrape.py
scripts/: build-data.ts  build-system-design.ts  check-review.ts  convert-data.ts  enhance-blogs.ts  generate-blogs.ts  generate-problem-blogs.ts  import-liquidslr.mjs
utils/: progressUtils.ts  utils.ts
(+6744 files in other folders)
